# topo-lang-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
runtime/test/: CMakeLists.txt  test_app_readback_ast_dump_pin.cpp  test_app_static_slice.cpp  test_app_vertical_slice.cpp  test_config.cpp
runtime/test/fixtures/: ast-dump-roundtrip.expected.txt  ast-dump-roundtrip.topo
test/: CMakeLists.txt  FeatureMap.cmake
test/e2e/: CppCompletenessTest.cpp  CppContainmentTest.cpp  CppImportPathTest.cpp  CppPurityTest.cpp  CppStageIsolationTest.cpp  CppVisibilityTest.cpp  TestMain.cpp
test/fixtures/check/completeness_fail/: Topo.toml
test/fixtures/check/completeness_pass/: Topo.toml
test/fixtures/check/containment_addr_of_system/: Topo.toml
test/fixtures/check/containment_allman_style/: Topo.toml
test/fixtures/check/containment_asm_escape/: Topo.toml
test/fixtures/check/containment_attr_constructor/: Topo.toml
test/fixtures/check/containment_builtin_dangerous/: Topo.toml
test/fixtures/check/containment_cast_escape/: Topo.toml
test/fixtures/check/containment_conditional_attack/: Topo.toml
test/fixtures/check/containment_cpp11_attr/: Topo.toml
test/fixtures/check/containment_ctor_backdoor/: Topo.toml
test/fixtures/check/containment_dep_include/: Topo.toml
test/fixtures/check/containment_dlopen/: Topo.toml
test/fixtures/check/containment_dtor_backdoor/: Topo.toml
test/fixtures/check/containment_exit_call/: Topo.toml
test/fixtures/check/containment_external_ok/: Topo.toml
test/fixtures/check/containment_fail/: Topo.toml
test/fixtures/check/containment_getenv/: Topo.toml
test/fixtures/check/containment_global_init/: Topo.toml
test/fixtures/check/containment_goto/: Topo.toml
test/fixtures/check/containment_header_backdoor/: Topo.toml
test/fixtures/check/containment_l2_deep_only/: Topo.toml
test/fixtures/check/containment_l2_external_ok/: Topo.toml
test/fixtures/check/containment_l2_indirect_io/: Topo.toml
test/fixtures/check/containment_l2_namespace_system/: Topo.toml
test/fixtures/check/containment_l2_safe_stdlib/: Topo.toml
test/fixtures/check/containment_l2_user_function_safe/: Topo.toml
test/fixtures/check/containment_macro_hide/: Topo.toml
test/fixtures/check/containment_memory_construct_at/: Topo.toml
test/fixtures/check/containment_memory_external_ok/: Topo.toml
test/fixtures/check/containment_memory_malloc/: Topo.toml
test/fixtures/check/containment_memory_memcpy/: Topo.toml
test/fixtures/check/containment_memory_strcpy/: Topo.toml
test/fixtures/check/containment_mprotect/: Topo.toml
test/fixtures/check/containment_multiline_cast/: Topo.toml
test/fixtures/check/containment_multiline_define/: Topo.toml
test/fixtures/check/containment_network/: Topo.toml
test/fixtures/check/containment_placement_new/: Topo.toml
test/fixtures/check/containment_pragma_link/: Topo.toml
test/fixtures/check/containment_qualified_safe/: Topo.toml
test/fixtures/check/containment_safe_code/: Topo.toml
test/fixtures/check/containment_setjmp/: Topo.toml
test/fixtures/check/containment_setuid/: Topo.toml
test/fixtures/check/containment_std_async/: Topo.toml
test/fixtures/check/containment_string_dispatch_bypass/: Topo.toml
test/fixtures/check/containment_system_call/: Topo.toml
test/fixtures/check/containment_template_arg_bypass/: Topo.toml
test/fixtures/check/containment_thread/: Topo.toml
test/fixtures/check/containment_union_punning/: Topo.toml
test/fixtures/check/containment_user_header_safe/: Topo.toml
test/fixtures/check/containment_volatile/: Topo.toml
test/fixtures/check/import_path_fail/: Topo.toml
test/fixtures/check/import_path_pass/: Topo.toml
test/fixtures/check/purity_cpp_fail_01/: Topo.toml
test/fixtures/check/purity_cpp_fail_02/: Topo.toml
test/integration/: NinjaGenTest.cpp
test/unit/: AppStaticRegexTest.cpp  CppAnalysisProviderTest.cpp  CppEmitterStdlibTest.cpp  CppExtractorFidelityTest.cpp  CppExtractorTest.cpp  CppStubGeneratorTest.cpp  CppSymbolAccessExtractorTest.cpp  CppSymbolExtractorTest.cpp  PreprocessorScannerTempFileRegressionTest.cpp  RuntimeTypesTest.cpp
topo-build/: CMakeLists.txt  CppDriver.cpp  CppDriver.h  NinjaGen.cpp  NinjaGen.h
topo-build/static-frontend/: AppStaticAnalyze.cpp  AppStaticAnalyze.h  CMakeLists.txt  main.cpp
topo-check/analysis/: CMakeLists.txt  CppAnalysisProvider.cpp  CppAnalysisProvider.h
topo-check/analysis/catalog/: CppPreprocessorScanner.cpp  CppPreprocessorScanner.h  CppSafePatterns.cpp  CppSafePatterns.h  CppSafePatterns.toml  CppSafetyAnalyzer.cpp  CppSafetyAnalyzer.h  CppUnsafeCatalog.cpp  CppUnsafeCatalog.h
topo-check/analysis/extract/: CppCallEdgeExtractor.cpp  CppCallEdgeExtractor.h  CppCallSiteExtractor.cpp  CppCallSiteExtractor.h  CppImportExtractor.cpp  CppImportExtractor.h  CppLSPCallSiteExtractor.cpp  CppLSPCallSiteExtractor.h  CppLSPImportExtractor.cpp  CppLSPImportExtractor.h  CppLSPSymbolExtractor.cpp  CppLSPSymbolExtractor.h  CppLSPUtils.h  CppSymbolAccessExtractor.cpp  CppSymbolAccessExtractor.h  CppSymbolExtractor.cpp  CppSymbolExtractor.h
topo-check/analysis/stub/: CppStubGenerator.cpp  CppStubGenerator.h
topo-check/extractor/: CMakeLists.txt  main.cpp
topo-check/runner/: CMakeLists.txt  CppCheckRunner.cpp  CppCheckRunner.h
topo-debug/: CMakeLists.txt  README.md  adapter.cpp  lldb_formatter.py
topo-debug/test/: CMakeLists.txt  formatter_e2e_driver.py  formatter_unit_test.py  init_lldbinit_driver.py
topo-debug/test/fixtures/: tiny_matrix.cpp  tiny_multi.cpp  tiny_struct.cpp  tiny_vector.cpp
topo-init/: CMakeLists.txt  CppInitTemplateProvider.cpp  CppInitTemplateProvider.h  CppLldbFormatterAsset.cpp.in
topo-lang/: CMakeLists.txt  CppPlugin.cpp  CppPlugin.h
topo-lsp/: CMakeLists.txt  ClangdBridge.cpp  ClangdBridge.h
topo-profile/: CMakeLists.txt
topo-profile/test/: CMakeLists.txt
topo-profile/test/fixtures/: arena_events_demo.cpp  parallel_events_demo.cpp  pass_events_demo.cpp  sampling_demo.folded  spans_demo.cpp
topo-transpile/: CMakeLists.txt  CppEmitter.cpp  CppEmitter.h
(+231 files in other folders)
